fix: sidebar readability
+ Add more blur
+ Add settings icon
+ Change font to Erode
+ Using a bigger side

--- a/source/assets/styles/_sidebar.css
+++ b/source/assets/styles/_sidebar.css
@@ -89,3 +89,11 @@
   color: var(--text-primary-light);
   text-decoration: underline;
 }
+
+/* SIDEBAR - ICONS */
+
+.sidebar__icons {
+  width: 1.2rem;
+  height: 1.2rem;
+  margin-bottom: -0.2rem;
+}
